Fixed layout issues with cards in trip view

--- a/client/styles.css
+++ b/client/styles.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding-left: 0;
   height: 100%;
+  text-align: center;
 }
 
 h1 {
@@ -49,15 +50,19 @@ input {
   background-size: cover;
 }
 
-.cardContainer {
-  margin-top: 125px;
+div.cardContainer {
+  position: relative;
   text-align: center;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 60px;
+  top: 200px;
 }
 
-.newCard {
-  width: 300px;
+div.newCard {
+  width: 350px;
   margin: 0 auto;
-  height: 300px;
+  height: 350px;
   border-style: solid;
   background-color: white;
 }
